kubernetes/configs/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: medical-app-service
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30082
  selector:
    app: medical-app
---
apiVersion: v1
kind: Service
metadata:
  name: appointments-service
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30084
  selector:
    app: appointments-app
---
apiVersion: v1
kind: Service
metadata:
  name: chatbot-service
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30086
  selector:
    app: chatbot
